tests/specs/TypeGenericAlias.txt
# mod.ts
export type A<T> = T

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type A<T> = T
  | ^


# output.txt
Defined in file:///mod.ts:1:1

type A<T> = T


# output.json
[
  {
    "kind": "typeAlias",
    "name": "A",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "typeAliasDef": {
      "tsType": {
        "repr": "T",
        "kind": "typeRef",
        "typeRef": {
          "typeParams": null,
          "typeName": "T"
        }
      },
      "typeParams": [
        {
          "name": "T"
        }
      ]
    }
  }
]
